changed hover background and border colors

--- a/css/style.css
+++ b/css/style.css
@@ -173,9 +173,9 @@ a:hover, a:active {
 }
 
 .hero-content .btn:focus {
-    background: #333333;
+    background: #74b44a;
     color: #F1F1F1;
-    border: 2px solid #333333;
+    border: 2px solid #74b44a;
 }
 .hero-content .btn:hover, .hero-content .btn:active {
     background: #333333;
