--- a/css/style.css
+++ b/css/style.css
@@ -380,3 +380,7 @@ footer {
 	p, h2, h3 { orphans: 3; widows: 3; }
 	h2, h3{ page-break-after: avoid; }
 }
+
+
+.hero-container {display: flex; justify-content: center; align-items: center;}
+
